# URC

./: .gitignore  README.md  setup.sh
EspFirmware/ArmController/: platformio.ini
EspFirmware/ArmController/install/: local_setup.sh  setup.sh  setup.zsh
EspFirmware/ArmController/log/: latest_build
EspFirmware/ArmController/src/: main.cpp
EspFirmware/HandController/: platformio.ini
EspFirmware/HandController/src/: main.cpp
EspFirmware/ReceiverBoard/src/: main.cpp
EspFirmware/arduino_sender/: platformio.ini
EspFirmware/arduino_sender/src/: main.cpp
EspFirmware/microRos_sender/: platformio.ini
EspFirmware/microRos_sender/src/: main.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/IMU_control/lib/IMU_control/: IMU_control
install/IMU_control/share/IMU_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
log/: latest_build
urc_ws/src/test_pkg/: package.xml  setup.py
urc_ws_interbotix/: 99-all-interbotix-rules.rules
urc_ws_interbotix/src/IMU_control/: setup.cfg  setup.py
urc_ws_interbotix/src/interbotix_xsarm_control/: CMakeLists.txt  robot_control.py
urc_ws_interbotix/src/modern_robotics/: package.xml  setup.cfg  setup.py
urc_ws_interbotix/src/piReceiver/: CMakeLists.txt  package.xml
urc_ws_interbotix/src/receiver/: CMakeLists.txt  package.xml
urc_ws_interbotix/src/receiver/launch/: receiver_launch.py  sim_launch.py
urc_ws_interbotix/src/receiver/src/: fake_sdk.cpp  receive.cpp
(+56 files in other folders)
