cmake_minimum_required(VERSION 3.8)
project(receiver)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(interbotix_xs_msgs REQUIRED)


add_executable(receive src/receive.cpp)
add_executable(fake_sdk src/fake_sdk.cpp)
ament_target_dependencies(fake_sdk rclcpp sensor_msgs interbotix_xs_msgs)
install(TARGETS fake_sdk DESTINATION lib/${PROJECT_NAME})

ament_target_dependencies(receive rclcpp sensor_msgs)


install(DIRECTORY launch
DESTINATION share/${PROJECT_NAME}
)

install(TARGETS receive DESTINATION lib/${PROJECT_NAME})


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
